tests/partial-sigs/should_compile/ExpressionSig.hs
{-# LANGUAGE PartialTypeSignatures #-}
module ExpressionSig where

bar :: Bool -> Bool
bar x = (x :: _)
