tests/partial-sigs/should_fail/ExtraConstraintsWildcardInPatternSignature.hs
{-# LANGUAGE ScopedTypeVariables #-}
module ExtraConstraintsWildcardInPatternSignature where

foo (x :: _ => _) y = x == y
